Upgrade code to Java 9 standards
Minor changes to the code, including replacement of the deprecated Class.newInstance method.